[project]
name = "rag"
version = "0.0.0"
dependencies = [
    "cache-decorator==2.1.15",
    "langchain==0.0.330",
    "pandas==2.1.2",
    "plotly-express==0.4.1",
    "pyarrow==14.0.0",
    "scikit-learn==1.3.2",
    "sentence-transformers==2.2.2",
    "typer==0.9.0",
    "streamlit==1.28.1",
]
[project.optional-dependencies]
dev = [
    "black==23.10.1",
    "isort==5.12.0",
]

[project.scripts]
rag = "rag.cli:main"

[tool.isort]
profile = "black"
