# Imitates:
# https://github.com/dkmiller/modern-python-package/blob/main/pyproject.toml

[project]
name = "deepagents-exploration"
version = "0.0.1"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
dependencies = [
    "deepagents>=0.6.3",
    "fastapi>=0.136.3",
    "onepassword-sdk>=0.4.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.14",
]

[tool.fastapi]
entrypoint = "deepagents_exploration.app:app"
