[project]
name = "greedy-santa"
readme = "README.md"

version = "0.0.1"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "polars>=1.37.1"
]
[project.optional-dependencies]
dev = [
    "ruff==0.14.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
