[package]
name = "hello-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11", features = ["json"]}
clap = "3.0.0-beta.4"
# https://github.com/serde-rs/serde/issues/1586
serde = { version = "1.0.130", features = ["derive"]}
serde_yaml = "0.8.7"
