[project]
name = "ptah"
readme = "README.md"
version = "0.0.0"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
dependencies = [
    "cachelib>=0.10.2",
    "dirhash>=0.2.1",
    "docker>=6.1.3",
    "injector>=0.20.1",
    "rich>=13.4.2",
    "typer>=0.9.0",
]
[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "isort==5.12.0",
    "pytest==7.4.0",
]

[project.scripts]
ptah = "ptah.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

# https://stackoverflow.com/a/68236386
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
