[project]
name = "ptah"
readme = "README.md"
version = "0.2.0"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
dependencies = [
    "cachelib>=0.10.2",
    "dirhash>=0.2.1",
    "jsonpath-ng>=1.5.3",
    "injector>=0.20.1",
    "psutil>=5.9.5",
    "pyperclip>=1.8.2",
    "rich>=13.4.2",
    "typer>=0.9.0",
]
[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "isort==5.12.0",
    "pytest==7.4.0",
]

[project.scripts]
ptah = "ptah.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

# https://stackoverflow.com/a/68236386
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
