[project]
name = "ui"
version = "0.0.0"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
dependencies = [
    "find-primes==2.2.1",
    "streamlit==1.24.0",
    "pyppeteer==1.0.2",
]

[project.scripts]
ui = "ui.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
