[project]
name = "ui"
version = "0.0.0"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
dependencies = [
    "find-primes==2.2.1",
    "injector==0.20.1",
    "streamlit==1.24.0",
    "pyppeteer==1.0.2",
    "requests==2.31.0",
]

[project.scripts]
probe = "ui.probe:main"
ui = "ui.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
