[project]
name = "api"
version = "0.0.0"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
dependencies = [
    "aiohttp==3.8.4",
    "fastapi==0.99.1",
    "uvicorn",
]

[project.scripts]
api = "api.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
