[project]
name = "api"
version = "0.1.2"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
dependencies = [
    "aiohttp==3.8.4",
    "fastapi==0.99.1",
    "fastapi-injector==0.5.1",
    "uvicorn",

    "opentelemetry-distro[otlp]==0.40b0",
    "opentelemetry-instrumentation-aiohttp-client==0.40b0",
    "opentelemetry-instrumentation-fastapi==0.40b0",
]

[project.scripts]
api = "api.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
