[project]
name = "ui"
version = "0.0.1"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
dependencies = [
    "find-primes==2.2.1",
    "injector==0.20.1",
    "pyppeteer==1.0.2",
    "requests==2.31.0",
    "streamlit==1.31.0",

    "opentelemetry-distro[otlp]==0.43b0",
    "opentelemetry-exporter-prometheus==0.43b0",
    "opentelemetry-instrumentation-requests==0.43b0",
    "opentelemetry-instrumentation-urllib3==0.43b0",
]

[project.scripts]
probe = "ui.probe:main"
ui = "ui.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
